--- a/macscanner/Dockerfile
+++ b/macscanner/Dockerfile
@@ -1,5 +1,6 @@
 # https://developers.home-assistant.io/docs/add-ons/configuration#add-on-dockerfile
-ARG BUILD_FROM
+#ARG BUILD_FROM
+ARG BUILD_FROM=ghcr.io/hassio-addons/base-python:latest
 FROM $BUILD_FROM
 
 # Execute during the build of the image
