--- a/macscanner/config.yaml
+++ b/macscanner/config.yaml
@@ -1,5 +1,5 @@
 # https://developers.home-assistant.io/docs/add-ons/configuration#add-on-config
-name: Example add-on
+name: Mac Scanner
 version: "1.2.0"
 slug: example
 description: Example add-on
